# ds-curso-video

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: Docker.yaml  EC2.yaml  rust.yml
kubernetes/: ds-curso-video-configmap.yaml  ds-curso-video-deployment.yaml  ds-curso-video.yaml  svc-ds-curso-video.yaml
src/: lib.rs  main.rs  mongo_connection.rs
src/alunos/: handler.rs  mod.rs  repository.rs
src/cursos/: handler.rs  mod.rs  repository.rs
src/relatorios/: handler.rs  mod.rs  repository.rs
tests/: test.rs
