[package]
name = "ds-curso-video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"
thiserror = "1.0.44"
warp = "0.3.5"
bson = "2.6.1"

[dependencies.mongodb]
version = "2.6.0"
default-features = false
features = ["sync"] 
